<resources>
    <string name="app_name">Boulder Climbing Journal</string>
    <string name="menu_add_session_button">Add Session</string>
    <string name="menu_sessions_log_button">Sessions Log</string>
    <string name="menu_stats_button">Stats</string>
    <string name="menu_grade_conversion_button">Grade Conversion</string>
    <string name="add_session_date">When?</string>
    <string name="add_session_location">add location</string>
    <string name="add_session_add_climb_button">Add Climb</string>
    <string name="add_session_climbs_logged">climbs logged:</string>
    <string name="add_session_notes">session notes</string>
    <string name="add_climb_notes">climb notes</string>
    <string name="add_session_points_text_initial">0 points</string>
    <string name="add_session_finish_session">Finish Session</string>
    <string name="add_climb_grade_text">grade</string>
    <string name="add_climb_add_button">add climb</string>
    <string name="add_climb_ascent_description">ascent description</string>
    <string name="add_location_text_header">choose a gym</string>
    <string name="add_session_date_header">Date:</string>
    <string name="add_session_location_header">Location:</string>
    <string name="gym_name_hint">gym name</string>
    <string name="stats_points_header">points per session</string>
    <string name="stats_climbs_header">climbs per session</string>
</resources>
