<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.itesm.boulderclimbingjournal.MainActivity"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingTop="@dimen/main_menu_padding_top"
    android:paddingBottom="@dimen/main_menu_padding_bottom"
    android:paddingRight="@dimen/main_menu_padding_right"
    android:paddingLeft="@dimen/main_menu_padding_left">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_add_session_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_add_session_button"
            app:icon="@drawable/ic_dummy"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="@dimen/main_menu_spaces_weight"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_sessions_log_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_sessions_log_button"
            app:icon="@drawable/ic_dummy"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="@dimen/main_menu_spaces_weight"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_stats_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_stats_button"
            app:icon="@drawable/ic_dummy"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="@dimen/main_menu_spaces_weight"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_grade_conversion_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_grade_conversion_button"
            app:icon="@drawable/ic_dummy"/>

</LinearLayout>
